--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,9 @@
 <header>
-	Nav goes here...
+	<hgroup>
+		<h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+		{% if site.subtitle %}
+		<h2>{{ site.subtitle }}</h2>
+		{% endif %}
+	</hgroup>
+	<nav id="main-nav">{% include navigation.html %}</nav>
 </header>
