--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <ul class="main-navigation">
     <li><a href="{{ site.baseurl }}/about/">About</a></li>
-    <li><a href="{{ site.baseurl }}/archive/">Blog</a></li>
+    <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
     <li><a href="https://github.com/703group/The-Bear-and-the-Frog/issues/new">Contact</a></li>
 </ul>
