--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
 	<meta name="MobileOptimized" content="320">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link rel="stylesheet" href="{{ site.baseurl }}/content/styles.css" />
+
 	<link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
 	<!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	<!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
@@ -20,17 +22,9 @@
 
 <body>
 	<div class="container">
-		<div class="left-col">
-			<div class="intrude-less">
-				<header id="header" class="inner">{% include header.html %}</header>				
-			</div>
-		</div>
-		<div class="mid-col">
-			<div class="mid-col-container">
-				<div id="content" class="inner">{{ content }}</div>
-			</div>
-			<footer id="footer" class="inner">{% include footer.html %}</footer>
-		</div>
+		<header id="header">{% include header.html %}</header>
+		<div id="content">{{ content }}</div>
+		<footer id="footer">{% include footer.html %}</footer>
 	</div>
 </body>
 </html>
