--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,8 @@
-<header>
-	<hgroup>
-		<h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
-		{% if site.subtitle %}
-		<h2>{{ site.subtitle }}</h2>
-		{% endif %}
-	</hgroup>
-	<nav id="main-nav">{% include navigation.html %}</nav>
-</header>
+<div class="row">
+	<div class="col-sm">
+		<h1><a href="{{ site.baseurl }}/">B&F</a></h1>
+	</div>
+	<div class="col-sm">
+			<nav id="main-nav">{% include navigation.html %}</nav>
+	</div>
+</div>
