--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,19 @@
-<ul class="main-navigation">
-    <li><a href="{{ site.baseurl }}/about/">About</a></li>
-    <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
-    <li><a href="https://github.com/703group/The-Bear-and-the-Frog/issues/new">Contact</a></li>
+<ul class="nav justify-content-end">
+    <li class="nav-item">
+        <a class="nav-link active" href="{{ site.baseurl }}/about/">About</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{ site.baseurl }}/blog/">Blog</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="https://github.com/703group/The-Bear-and-the-Frog/issues/new">Contact</a>
+    </li>
 </ul>
+
+<!-- 
+    TODO: Revist bottom nav.... 
+<nav class="navbar fixed-bottom navbar-light bg-light">
+    <a class="navbar-brand" href="#">Fixed bottom</a>
+</nav>
+
+-->
