--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 
 <body>
 	<div class="container">
-		<header id="header">{% include header.html %}</header>
+		<header>{% include header.html %}</header>
 		<div id="content">{{ content }}</div>
 		<footer id="footer">{% include footer.html %}</footer>
 	</div>
