make nav links dark

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,12 +1,12 @@
 <ul class="nav justify-content-end">
     <li class="nav-item">
-        <a class="nav-link active" href="{{ site.baseurl }}/about/">About</a>
+        <a class="nav-link text-dark" href="{{ site.baseurl }}/about/">About</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/blog/">Blog</a>
+        <a class="nav-link text-dark" href="{{ site.baseurl }}/blog/">Blog</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="https://github.com/703group/The-Bear-and-the-Frog/issues/new">Contact</a>
+        <a class="nav-link text-dark" href="https://github.com/703group/The-Bear-and-the-Frog/issues/new">Contact</a>
     </li>
 </ul>
 
