--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <div class="row">
 	<div class="col-sm">
-		<h1><a href="{{ site.baseurl }}/">B&F</a></h1>
+		<h1><a href="{{ site.baseurl }}/" class="text-dark">B&F</a></h1>
 	</div>
 	<div class="col-sm">
-			<nav id="main-nav">{% include navigation.html %}</nav>
+		<nav id="main-nav">{% include navigation.html %}</nav>
 	</div>
 </div>
