updates to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 	<div class="container">
 		<header>{% include header.html %}</header>
 		<div id="content">{{ content }}</div>
-		<footer id="footer">{% include footer.html %}</footer>
 	</div>
+	<footer class="bg-light">{% include footer.html %}</footer>
 </body>
 </html>
