add copyright section to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,11 @@
 <div class="container">
-    footer goes here...
+    <div class="row">
+
+    </div>
+    <hr />
+    <div class="row">
+        <div class="col">
+            &copy; Copyright 2017
+        </div>
+    </div>
 </div>
