--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,16 @@
 <div class="container">
     <div class="row">
-
+        <div class="col">
+            <h5>The Bear and the Frog</h3>
+            <p class="text-secondary">We are a husband and wife team that love being parents.</p>
+        </div>
+        <div class="col">
+                <h5>Categories</h5>
+            </div>
+        <div class="col">
+            <h5>Tweets</h5>
+            <p></p>
+        </div>
     </div>
     <hr />
     <div class="row">
