Add contact section to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,11 @@
             <p class="text-secondary">We are a husband and wife team that love being parents.</p>
         </div>
         <div class="col">
+            <h5>Contact</h5>
+            <p>Tampa, Fl</p>
+            <p>contact@thebearnandthefrog.com</p>
+        </div>
+        <div class="col">
             <h5>Categories</h5>
             <ul class="list-group">
                 {% assign tags_list = site.categories %}  
@@ -26,15 +31,11 @@
                 {% assign tags_list = nil %}
             </ul>
         </div>
-        <div class="col">
-            <h5>Tweets</h5>
-            <p></p>
-        </div>
     </div>
     <hr />
     <div class="row">
         <div class="col">
-            &copy; Copyright 2017
+            &copy; Copyright 2017 | The Bear and the Frog
         </div>
     </div>
 </div>
