--- a/_includes/article.html
+++ b/_includes/article.html
@@ -1,5 +1,5 @@
 {% if index %}
-<h1 class="title" itemprop="name"><a href="{{ post.url | prepend: site.baseurl }}" itemprop="url">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a></h1>
+<h1 class="title" itemprop="name"><a href="{{ post.url | prepend: site.baseurl }}" class="text-dark display-4 font-weight-light" itemprop="url">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a></h1>
 
 <div class="entry-content" itemprop="articleBody">
     {{ content | excerpt }}
