--- a/_includes/article.html
+++ b/_includes/article.html
@@ -1,11 +1,14 @@
 {% if index %}
 <h1 class="title" itemprop="name"><a href="{{ post.url | prepend: site.baseurl }}" class="text-dark display-4 font-weight-light" itemprop="url">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a></h1>
-<ul class="list-inline">
-    {% for tag in post.tags %}
-    <li class="list-inline-item">{{ tag }}</li>
-    {% endfor %}
-</ul>
-
+<div>
+    {% octicon tag height:25 class:"img-fluid float-left mr-1" %}
+    <ul class="list-inline">
+        {% for tag in post.tags %}
+        <li class="list-inline-item">{{ tag }}</li>
+        {% endfor %}
+    </ul>
+</div>        
+<div class="clearfix"></div>
 <div class="entry-content" itemprop="articleBody">
     {{ content | excerpt }}
     {% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
