update footer to add additional links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,13 +10,23 @@
             <p>contact@thebearnandthefrog.com</p>
         </div>
         <div class="col">
-            
+            <h5>Follow Us</h5>
         </div>
     </div>
     <hr />
     <div class="row">
         <div class="col">
             &copy; Copyright 2017 | The Bear and the Frog
+        </div>
+        <div class="col">
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link text-dark h6" href="{{ site.baseurl }}/privacy/">Privacy</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark h6" href="https://github.com/703group/The-Bear-and-the-Frog/issues/new">Contact</a>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
