--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,9 @@
                     <a class="nav-link text-dark h6" href="{{ site.baseurl }}/privacy/">Privacy</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-dark h6" href="{{ site.baseurl }}/archive/">Archive</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-dark h6" href="https://github.com/703group/The-Bear-and-the-Frog/issues/new">Contact</a>
                 </li>
             </ul>
