--- a/_includes/postlist.html
+++ b/_includes/postlist.html
@@ -2,7 +2,7 @@
 <div itemscope itemtype="http://schema.org/Blog">
 {% for post in site.posts %}
     <article class="post" itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
-        {% include article.html %}
+        {% include excerptedpost.html %}
     </article>
 {% endfor %}
 </div>
