--- a/_includes/postlist.html
+++ b/_includes/postlist.html
@@ -1,7 +1,7 @@
 
 <div itemscope itemtype="http://schema.org/Blog">
 {% for post in site.posts %}
-    <article class="post" itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
+    <article class="post mb-4" itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
         {% include excerptedpost.html %}
     </article>
 {% endfor %}
