adjust width of columns for new image size

--- a/_includes/excerptedpost.html
+++ b/_includes/excerptedpost.html
@@ -1,10 +1,10 @@
 <div class="entry-content" itemprop="articleBody">
     <div class="row">
-        <div class="col">
+        <div class="col-sm-5">
             {% capture thumbnail %}{% if post.thumbnail_image %}{{ post.thumbnail_image }}{% else %}/content/images/noimage2.jpg{% endif %}{% endcapture %}
             <img class="img-thumbnail img-fluid" src="{{ thumbnail | prepend: site.baseurl}}" />
         </div>
-        <div class="col">
+        <div class="col-sm-7">
             <h1 class="title" itemprop="name"><a href="{{ post.url | prepend: site.baseurl }}" class="text-dark font-weight-light" itemprop="url">{{ post.title | titlecase }}</a></h1>
             {{ post.excerpt }}
             <a href="{{ post.url | prepend: site.baseurl }}" class="more-link">{{ site.excerpt_link }}</a>
