change meta data on post page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,9 @@ layout: default
 single: true
 ---
 
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">{% include article.html %}</article>
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+        {% include article.html %}
+</article>
 
 <div id="page-navigation"> 
         <div class="previous"> 
