--- a/_includes/article.html
+++ b/_includes/article.html
@@ -1,15 +1,16 @@
-{% if index %}
-<h1 class="title" itemprop="name"><a href="{{ post.url | prepend: site.baseurl }}" class="text-dark display-4 font-weight-light" itemprop="url">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a></h1>
-{% include meta.html %}
-     
-<div class="clearfix"></div>
-<div class="entry-content" itemprop="articleBody">
-    {{ content | excerpt }}
-    {% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
-    {% if excerpted == 'true' %}<a href="{{ post.url | prepend: site.baseurl }}" class="more-link">{{ site.excerpt_link }}</a>{% endif %}
-</div>
-{% else %}
 <h1 class="title" itemprop="name">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h1>
-
+<div class="row">
+        <div class="col">
+            <ul class="list-unstyled">
+                <li>
+                    {% octicon calendar height:25 class:"img-fluid mr-1" %}
+                    <time datetime="{{ page.date | datetime | date_to_xmlschema }}" {% if updated %}data-updated="true"{% endif %} itemprop="datePublished">{{ page.date | date: "%B %e, %Y" }}</time>
+                </li>
+                <li>
+                    {% octicon tag height:25 class:"img-fluid mr-1" %}
+                    {{ page.categories[0] }}
+                </li>
+            </ul>
+        </div>
+    </div>
 <div class="entry-content" itemprop="articleBody">{{ content }}</div>
-{% endif %}
